--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,7 @@
     <div id="div1"class="card">
         <img src="Pacman.png" class="card-img-top" alt="PacMan" width="50">
       <div class="card-body">
-        <h5><a href="https://https://jenniferwtam.github.io/Pacman-Exercise/"style="color:#0A9B9B;">Pacman Exercise</a></h5>
+        <h5><a href="https://jenniferwtam.github.io/Pacman-Exercise/"style="color:#0A9B9B;">Pacman Exercise</a></h5>
         <p class="card-text">If you've ever played an arcade game, then you're familiar with Pac-Man!<br>
             
             You're not going to build the full PacMan game in this activity. However, you will be building a feature of this game, which displays and moves PacMan from one side of the screen to the other.<br>
