--- a/projects.html
+++ b/projects.html
@@ -80,8 +80,18 @@
 <!-- Navbar End -->
 
 <!---Start-->
-
+<!-- https://jenniferwtam.github.io/weather-report/ -->
 <div class="card-group">
+    <div id="div4" class="card">
+        <img src="Pacman.png" class="card-img-top" alt="PacMan" width="50">
+          <div class="card-body">
+            <h5><a href="https://jenniferwtam.github.io/weather-report/"style="color:#0A9B9B;">Weather Report App</a></h5>
+            <p class="card-text">"Do I need to bring a jacket?" "Will it snow today?" "How hot will it be?" When we have questions like these, we often pull open a weather app!<br>
+                Using Axios to call 3rd party APIs - Using a proxy server to manage API keys - Handling asynchronous calls.<br>
+                <a href="https://github.com/JenniferWTam/weather-report"><button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Code</button></a>
+            </p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
     <div id="div1"class="card">
         <img src="Pacman.png" class="card-img-top" alt="PacMan" width="50">
       <div class="card-body">
