fixed image naming and link bugs

--- a/gallery.html
+++ b/gallery.html
@@ -58,7 +58,7 @@
     <!-- Single item -->
     <div class="carousel-item active">
       <video class="img-fluid" autoplay loop muted>
-        <source src="beach.mp4" type="video/mp4" />
+        <source src="./images/beach.mp4" type="video/mp4" />
       </video>
       <div class="carousel-caption d-none d-md-block">
         <h5>Relaxing Day on the Beach</h5>
@@ -76,27 +76,13 @@
 <div class="row">
     <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
       <img
-        src="chub8.png"
+        src="./images/chub5.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt=""
       />
   
       <img
-        src="chub9.png"
-        class="w-100 shadow-1-strong rounded mb-4"
-        alt=""
-      />
-    </div>
-  
-    <div class="col-lg-4 mb-4 mb-lg-0">
-      <img
-        src="chub3.png"
-        class="w-100 shadow-1-strong rounded mb-4"
-        alt=""
-      />
-  
-      <img
-        src="chub4.png"
+        src="./images/chub6.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt=""
       />
@@ -104,13 +90,27 @@
   
     <div class="col-lg-4 mb-4 mb-lg-0">
       <img
-        src="chub5.png"
+        src="./images/chub.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt=""
       />
   
       <img
-        src="chub6.png"
+        src="./images/chub2.png"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt=""
+      />
+    </div>
+  
+    <div class="col-lg-4 mb-4 mb-lg-0">
+      <img
+        src="./images/chub3.png"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt=""
+      />
+  
+      <img
+        src="./images/chub4.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt=""
       />
