--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <!-- CSS only -->
-    <link> <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
   <script>
       $(document).ready(function () {
@@ -43,7 +43,7 @@
 <body style="background-color: cadetblue;">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="https://JenniferWTam.github.io">JenniferWTam</a>
+          <a class="navbar-brand" href="https://JenniferWTam.github.io/JenniferWTam">Home</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -56,18 +56,18 @@
                 <a class="nav-link" href="https://github.com/JenniferWTam?tab=repositories">Repository</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                  Bio Links
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="https://github.com/JenniferWTam">Github</a></li>
-                    <li><a class="dropdown-item" href="https://linkedin.com/in/jennifer-tam-894a171b7">LinkedIn</a></li>
+                  <li><a class="dropdown-item" href="https://github.com/JenniferWTam">Github</a></li>
+                  <li><a class="dropdown-item" href="https://linkedin.com/in/jennifer-tam-894a171b7">LinkedIn</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="mailto: jenniferwtam@gmail.com">Contact Me</a></li>
+                  <li><a class="dropdown-item" href="mailto:jenniferwtam@gmail.com">Contact Me</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="projects.html" tabindex="-1" aria-disabled="true">Projects</a>
+                <a class="nav-link disabled" href="projects.html" tabindex="-1">Projects</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -83,7 +83,7 @@
 <!-- https://jenniferwtam.github.io/weather-report/ -->
 <div class="card-group">
     <div id="div4" class="card">
-        <img src="Pacman.png" class="card-img-top" alt="PacMan" width="50">
+        <img src="./images/Weather.png" class="card-img-top" alt="PacMan" width="50">
           <div class="card-body">
             <h5><a href="https://jenniferwtam.github.io/weather-report/"style="color:#0A9B9B;">Weather Report App</a></h5>
             <p class="card-text">"Do I need to bring a jacket?" "Will it snow today?" "How hot will it be?" When we have questions like these, we often pull open a weather app!<br>
@@ -93,7 +93,7 @@
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
     <div id="div1"class="card">
-        <img src="Pacman.png" class="card-img-top" alt="PacMan" width="50">
+        <img src="./images/Pacman.png" class="card-img-top" alt="PacMan" width="50">
       <div class="card-body">
         <h5><a href="https://jenniferwtam.github.io/Pacman-Exercise/"style="color:#0A9B9B;">Pacman Exercise</a></h5>
         <p class="card-text">If you've ever played an arcade game, then you're familiar with Pac-Man!<br>
@@ -105,7 +105,7 @@
       </div>
     </div>
     <div id="div2"class="card">
-      <img class="card-img-top" src="Eye Movement.png" alt="Eye Movement">
+      <img class="card-img-top" src="./images/EyeMovement.png" alt="Eye Movement">
       <div class="card-body">
         <h5><a href="https://jenniferwtam.github.io/Eye-Exercise/"style="color:#0A9B9B;">Eye Exercise Repository</a></h5>
           <p class="card-text">In JavaScript, events are actions that happen on a web page. They can be anything from a mouse moving to a user typing in some text. Events happen to most elements on the DOM. These events are a good way to bind a code to user actions. For example, consider a web page that has a form with a "Submit" button. You can bind the mouse button click to that button and submit the form data upon that click. This program binds code to user actions in tracking a pair of eye 'movements' with JavaScript animation<br>
@@ -115,9 +115,9 @@
       </div>
     </div>
     <div id="div3"class="card">
-      <img class="card-img-top" src="Map.png" alt="Map">
+      <img class="card-img-top" src="./images/Map.png" alt="Map">
       <div class="card-body">
-        <h5><a href="https://jenniferwtam.github.io/Real-Time-Bus-Tracking/"style="color:#0A9B9B;">Real Time Bus Tracking Repository</a></h5>
+        <h5 href="https://jenniferwtam.github.io/Real-Time-Bus-Tracking/"style="color:#0A9B9B;">Real Time Bus Tracking Repository</h5>
         <p class="card-text">Mapbox is an open-source platform that allows you to create and display maps on a web page. It allows you to add all sorts of customizations to the map. For example, you can add a marker at a specific location on the map. <br>
           <a href="https://github.com/JenniferWTam/Real-Time-Bus-Tracking"><button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Code</button></a>
         </p>
@@ -133,7 +133,7 @@
  <footer class="footer mt-auto py-1 bg-light fixed-bottom">
     <div>
     <p class="float-end"><a href="#">Back to top</a></p>
-    <p>&copy; MIT xPro Portfolio &middot; <a href="https://github.com/JenniferWTam" target="__blank">Github</a> &middot; <a href="https://linkedin.com/in/jennifer-tam-894a171b7" target="__blank">LinkedIn</a> &middot; <a href="mailto: jenniferwtam@gmail.com" target="__blank">Contact Me</a></p>
+    <p>&copy; MIT xPro Portfolio &middot; <a href="https://github.com/JenniferWTam" target="__blank">Github</a> &middot; <a href="https://linkedin.com/in/jennifer-tam-894a171b7" target="__blank">LinkedIn</a> &middot; <a href="mailto:jenniferwtam@gmail.com" target="__blank">Contact Me</a></p>
   </div>
   </footer>
       <!-- Footer Ends -->
