--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="https://JenniferWTam.github.io">JenniferWTam</a>
+          <a class="navbar-brand" href="https://JenniferWTam.github.io/JenniferWTam">Home</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -91,7 +91,7 @@
 
     <!-- Single item -->
     <video height="1200" id="bgVideo" controls preload="true" autoplay loop muted>
-      <source src="waves2.mp4" type="video/mp4" > 
+      <source src="./images/waves2.mp4.mp4" type="video/mp4" > 
    </video>
   <!-- Inner -->
 </div>
