resolved more href bugs

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="https://github.com/JenniferWTam">Github</a></li>
-                  <li><a class="dropdown-item" href="https://linkedin.com/in/jennifer-tam-894a171b7">LinkedIn</a></li>
+                  <li><a class="dropdown-item" href="https://linkedin.com/in/jenniferwtam">LinkedIn</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="mailto: jenniferwtam@gmail.com">Contact Me</a></li>
                 </ul>
